kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: health-deployment
spec:
    replicas: 2
    selector:
       matchLabels:
          app: health-app
    template:
       metadata:
          labels:
             app: health-app
       spec:
          containers:
          - name: health
            image: mariegiselle8/health:dev
            ports:
              - name: web 
                containerPort: 8000
