kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arch-homework-service
spec:
  selector:
    app: health-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
