kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: homework-ingress
spec:
  rules:
  - host: arch.homework
    http:
      paths:
        - path: /(.*)?(health)
          pathType: ImplementationSpecific
          backend:
            service:
              name: arch-homework-service
              port:
                number: 80
